fix: Bottom spacing

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     padding: 0 15px;
     padding-top: 25px;
     background-color: #dddddd;
+    margin-bottom: 0px;
 }
 
 p {
